# INFO-5731

./: .gitignore  README.md  Thatikonda_Nikith_Assignment_02.ipynb  Thatikonda_Nikith_Assignment_03.ipynb  pyproject.toml  requirements.txt  saltburn_movie_reviews_with_sentiment.csv
src/: __init__.py  config.py  dependencies.py  main.py
src/api/v1/: routes.py
src/models/: schemas.py
tests/: test_main.py
